k8s/wordpress/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-redis
  namespace: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress-redis
    spec:
      containers:
        - name: wordpress-redis
          image: redis:7.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: wordpress-redis
          resources:
            requests:
              cpu: 50m
              memory: 10Mi
            limits:
              cpu: 100m
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: wordpress-redis
  name: wordpress-redis
  namespace: wordpress
spec:
  type: ClusterIP
  ports:
    - port: 6379
      name: wordpress-redis
  selector:
    app: wordpress-redis
